[build-system]
requires = [
    "setuptools>=77.0.3",
    "setuptools-scm>=8.0",
    "wheel",
    "pybind11>=2.10.0",
    "numpy>=1.19.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pybcsv"
authors = [
    {name = "Tobias Weber", email = "weber.tobias.md@gmail.com"},
]
description = "High-performance Python bindings for the BCSV (Binary CSV) library with pandas integration"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research", 
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Compression",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["csv", "binary", "data-science", "compression", "performance", "pandas", "numpy", "big-data", "data-processing"]
dependencies = [
    "numpy>=1.19.0",
]
dynamic = ["version"]

[tool.setuptools_scm]
root = ".."
version_file = "pybcsv/_version.py"
tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"

[project.optional-dependencies]
pandas = ["pandas>=1.0.0"]
test = ["pytest>=6.0.0", "pytest-cov"]
dev = ["pytest>=6.0.0", "pytest-cov", "black", "flake8"]

[project.urls]
Homepage = "https://github.com/webertob/bcsv"
Documentation = "https://github.com/webertob/bcsv#readme"
Repository = "https://github.com/webertob/bcsv"
"Bug Tracker" = "https://github.com/webertob/bcsv/issues"
"Source Code" = "https://github.com/webertob/bcsv"

[tool.setuptools.packages.find]
where = ["."]
include = ["pybcsv*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
pybcsv = ["py.typed"]

[tool.setuptools]
include-package-data = true
zip-safe = false
