[build-system]
requires = [
    "scikit-build-core>=0.10",
    "nanobind>=2.4.0",
    "setuptools-scm>=8.0",
    "numpy>=1.19.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "pybcsv"
authors = [
    {name = "Tobias Weber", email = "weber.tobias.md@gmail.com"},
]
description = "High-performance Python bindings for the BCSV (Binary CSV) library with pandas integration"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research", 
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Compression",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["csv", "binary", "data-science", "compression", "performance", "pandas", "numpy", "big-data", "data-processing"]
dependencies = [
    "numpy>=1.19.0",
]
dynamic = ["version"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["pybcsv"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
root = ".."
version_file = "pybcsv/_version.py"
tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"

[project.optional-dependencies]
pandas = ["pandas>=2.0.0"]
arrow = ["pyarrow>=12.0"]
polars = ["polars>=0.20"]
ml = ["torch>=2.0"]
test = ["pytest>=6.0.0", "pytest-cov"]
dev = ["pytest>=6.0.0", "pytest-cov", "black", "flake8"]

[project.urls]
Homepage = "https://github.com/webertob/bcsv"
Documentation = "https://github.com/webertob/bcsv#readme"
Repository = "https://github.com/webertob/bcsv"
"Bug Tracker" = "https://github.com/webertob/bcsv/issues"
"Source Code" = "https://github.com/webertob/bcsv"



[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-*"
skip = "*-musllinux_* *-win32 *-manylinux_i686"
test-requires = ["pytest", "pandas", "pyarrow"]
test-command = "pytest {project}/tests/ -x -q --tb=short"

[tool.cibuildwheel.linux]
before-build = "pip install nanobind numpy"
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
before-build = "pip install nanobind numpy"
environment = { MACOSX_DEPLOYMENT_TARGET = "13.3" }

[tool.cibuildwheel.windows]
before-build = "pip install nanobind numpy"

[tool.pytest.ini_options]
testpaths = ["tests"]
